Download geojson of all drawn features

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       <label for="comm_type">Community Type</label><br>
       <button id="save">Save</button>
     </form>
+    <a id="export"></a>
     <script src="https://api.tiles.mapbox.com/mapbox.js/plugins/turf/v3.0.11/turf.min.js"></script>
     <script src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-draw/v1.0.9/mapbox-gl-draw.js"></script>
     <script src="map.js"></script>
