Toggle on/off MBTA layers

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
   <body>
     <div id="map" />
     <form class="layers">
-      <input type="checkbox" id="comm_type" name="selected-layer" value="comm_type" checked>
-      <label for="comm_type">Community Type</label><br>
+      <input type="checkbox" id="mbta" name="selected-layer" value="mbta" selected checked>
+      <label for="mbta">MBTA</label><br>
       <button id="save">Save</button>
     </form>
     <a id="export"></a>
