Add notes section and allow editable features

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link href="style.css" rel="stylesheet" />
   </head>
   <body>
-    <main id="map"></main>
+    <main id="map" class="map"></main>
     <aside class="sidebar">
       <form class="layers">
         <p>Layers</p>
@@ -21,7 +21,6 @@
         <label for="mbta">MBTA</label><br>
         <button id="save">Save</button>
       </form>
-      <hr />
       <a id="export"></a>
     </aside>
     <script src="https://api.mapbox.com/mapbox-gl-js/v1.10.0/mapbox-gl.js"></script>
