--- a/index.html
+++ b/index.html
@@ -45,8 +45,42 @@
 
         <input type="radio" id="basic" name="layer__radio-options">
         <label for="basic">Basic employment (%)</label><br>
+        <input type="reset" value="Reset choropleth" id="reset">
         <button id="save">Save</button>
       </form>
+      <svg width="250" height="250" style="display: none;" class="legend">
+        <rect x="10" y="0" width="16" height="16" fill="#e8bcd9" />
+        <text x="30" y="12" id="legend-0">0</text>
+        <rect x="10" y="20" width="16" height="16" fill="#F7FCFD" />
+        <text x="30" y="32" id="legend-1"></text>
+        <rect x="10" y="40" width="16" height="16" fill="#CCECE6" />
+        <text x="30" y="52" id="legend-2"></text>
+        <rect x="10" y="60" width="16" height="16" fill="#66C2A4" />
+        <text x="30" y="72" id="legend-3"></text>
+        <rect x="10" y="80" width="16" height="16" fill="#238B45" />
+        <text x="30" y="92" id="legend-4"></text>
+        <rect x="10" y="100" width="16" height="16" fill="#00441B" />
+        <text x="30" y="112" id="legend-5"></text>
+            <!-- <text x="32" y="14" className="map__legend-entry" fill="#1F4E46">25 – 35%</text>
+            <rect x="10" y="30" width="16" height="16" style={{ fill: colors[1], stroke: 'black', strokeWidth: '1px' }} />
+            <text x="32" y="42" className="map__legend-entry" fill="#1F4E46">15 – 25%</text>
+            <rect x="10" y="58" width="16" height="16" style={{ fill: colors[2], stroke: 'black', strokeWidth: '1px' }} />
+            <text x="32" y="70" className="map__legend-entry" fill="#1F4E46">5 – 15%</text>
+            <rect x="10" y="86" width="16" height="16" style={{ fill: colors[3], stroke: 'black', strokeWidth: '1px' }} />
+            <text x="32" y="98" className="map__legend-entry" fill="#1F4E46">0 – 5%</text>
+            <rect x="10" y="114" width="16" height="16" style={{ fill: colors[4], stroke: 'black', strokeWidth: '1px' }} />
+            <text x="32" y="126" className="map__legend-entry" fill="#1F4E46">Data unavailable</text>
+            <rect x="10" y="142" width="16" height="16" style={{ fill: 'white', stroke: 'black', strokeWidth: '1px' }} />
+            <line x1="10" y1="150" x2="18" y2="142" style={{ stroke: '#2C110F', strokeWidth: '2px' }} />
+            <line x1="10" y1="158" x2="26" y2="142" style={{ stroke: '#2C110F', strokeWidth: '2px' }} />
+            <line x1="18" y1="158" x2="26" y2="150" style={{ stroke: '#2C110F', strokeWidth: '2px' }} />
+            <text x="32" y="154" className="map__legend-entry" fill="#1F4E46">Hard-to-count tract</text>
+            <text x="32" y="166" className="map__legend-entry" fill="#1F4E46">(&#x2264; 73% mail return</text>
+            <text x="32" y="178" className="map__legend-entry" fill="#1F4E46">rate, 2010 census)</text>
+            <text x="8" y="198" className="map__legend-entry map__legend-entry--bold" fill="#1F4E46">Explore & Download</text>
+            <text x="8" y="212" className="map__legend-entry map__legend-entry--bold" fill="#1F4E46">Data</text> -->
+
+      </svg>
       <a id="export"></a>
     </aside>
     <script src="https://api.mapbox.com/mapbox-gl-js/v1.10.0/mapbox-gl.js"></script>
