--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <link href="style.css" rel="stylesheet" />
   </head>
   <body>
-    <main id="map" class="map"></main>
+    <main id="map" class="map">
+      <img class="control__download" src="download.png" />
+    </main>
     <aside class="sidebar">
       <form class="layers">
         <input type="checkbox" id="mbta" checked autocomplete="off">
@@ -47,7 +49,6 @@
         <label for="basic">Basic employment (%)</label><br>
         
         <input type="reset" value="Reset choropleth" id="reset">
-        <button id="save">Save</button>
       </form>
       <svg width="200" height="100" class="legend legend__massbuilds">
         <text x="0" y="16" class="legend__title">MassBuilds</text>
