Display clean basemap on load

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
     </main>
     <aside class="sidebar">
       <form class="layers">
-        <input type="checkbox" id="mbta-lines" checked autocomplete="off">
+        <input type="checkbox" id="mbta-lines" autocomplete="off">
         <label for="mbta-lines">MBTA + ferry lines</label><br>
 
-        <input type="checkbox" id="mbta-stops" checked autocomplete="off">
+        <input type="checkbox" id="mbta-stops" autocomplete="off">
         <label for="mbta-stops">MBTA + ferry stops</label><br>
 
         <input type="checkbox" id="massbuilds" autocomplete="off">
