Set styling for first Trips to Focus Area choropleth

--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
         <input type="radio" id="basic" name="layer__radio-options" autocomplete="off">
         <label for="basic">Basic employment (%)</label><br>
         
+        <input type="radio" id="trips_all" name="layer__radio-options" autocomplete="off">
+        <label for="trips_all">Trips to focus area</label><br>
+        
         <input type="reset" value="Reset map settings" id="reset">
       </form>
       <svg width="200" height="100" class="legend legend__massbuilds">
