List all possible choropleths

--- a/index.html
+++ b/index.html
@@ -56,9 +56,43 @@
         <input type="radio" id="basic" name="layer__radio-options" autocomplete="off">
         <label for="basic">Basic employment (%)</label><br>
         
-        <h3 class="layers__subtitle">Focus area travel patterns</h3>
+        <h3 class="layers__subtitle">2040 projection choropleths</h3>
+        <input type="radio" id="lrtp_hh" name="layer__radio-options" autocomplete="off">
+        <label for="lrtp_hh">LTRP 2040 household projection</label><br>
+
+        <input type="radio" id="lrtp_emp" name="layer__radio-options" autocomplete="off">
+        <label for="lrtp_emp">LTRP 2040 employment projection</label><br>
+
+        <input type="radio" id="feir_hh" name="layer__radio-options" autocomplete="off">
+        <label for="feir_hh">FEIR 2040 household projection</label><br>
+
+        <input type="radio" id="feir_emp" name="layer__radio-options" autocomplete="off">
+        <label for="feir_emp">FEIR 2040 employment projection</label><br>
+
+        <input type="radio" id="fmax_hh" name="layer__radio-options" autocomplete="off">
+        <label for="fmax_hh">FMAX 2040 household projection</label><br>
+
+        <input type="radio" id="fmax_emp" name="layer__radio-options" autocomplete="off">
+        <label for="fmax_emp">FMAX 2040 employment projection</label><br>
+
+        <h3 class="layers__subtitle">Average trips to focus area</h3>
         <input type="radio" id="trips_all" name="layer__radio-options" autocomplete="off">
-        <label for="trips_all">Trips to focus area</label><br>
+        <label for="trips_all">Total trips</label><br>
+
+        <input type="radio" id="trips_transit" name="layer__radio-options" autocomplete="off">
+        <label for="trips_transit">Transit trips</label><br>
+
+        <input type="radio" id="trips_driver" name="layer__radio-options" autocomplete="off">
+        <label for="trips_driver">Auto trips (driver)</label><br>
+
+        <input type="radio" id="trips_pax" name="layer__radio-options" autocomplete="off">
+        <label for="trips_pax">Auto trips (passenger)</label><br>
+
+        <input type="radio" id="trips_bike" name="layer__radio-options" autocomplete="off">
+        <label for="trips_bike">Bike trips</label><br>
+
+        <input type="radio" id="trips_walk" name="layer__radio-options" autocomplete="off">
+        <label for="trips_walk">Walking trips</label><br>
         
         <input type="reset" value="Reset map settings" id="reset">
       </form>
