--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <input type="radio" id="trips_driver" name="layer__radio-options" autocomplete="off">
         <label for="trips_driver">Auto trips (driver)</label><br>
 
-        <input type="radio" id="trips_pax" name="layer__radio-options" autocomplete="off">
+        <input type="radio" id="trips_auto_pax" name="layer__radio-options" autocomplete="off">
         <label for="trips_pax">Auto trips (passenger)</label><br>
 
         <input type="radio" id="trips_bike" name="layer__radio-options" autocomplete="off">
