Add guide to choropleths in readme

--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@
         <label for="trips_transit">Transit trips</label><br>
 
         <input type="radio" id="trips_driver" name="layer__radio-options" autocomplete="off">
-        <label for="trips_driver">Auto trips (driver)</label><br>
+        <label for="trips_driver">Auto trips (as driver)</label><br>
 
         <input type="radio" id="trips_auto_pax" name="layer__radio-options" autocomplete="off">
-        <label for="trips_pax">Auto trips (passenger)</label><br>
+        <label for="trips_pax">Auto trips (as passenger)</label><br>
 
         <input type="radio" id="trips_bike" name="layer__radio-options" autocomplete="off">
         <label for="trips_bike">Bike trips</label><br>
