Add toggle option for open spaces

--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
 
         <input type="checkbox" id="massbuilds" autocomplete="off">
         <label for="massbuilds">MassBuilds developments</label><br>
+
+        <input type="checkbox" id="openspace" autocomplete="off">
+        <label for="openspace">Open spaces</label>
         
         <h3 class="layers__subtitle">Demographic choropleths</h3>
         <input type="radio" id="population" name="layer__radio-options" autocomplete="off">
