--- a/index.html
+++ b/index.html
@@ -58,27 +58,11 @@
 
         <input type="radio" id="basic" name="layer__radio-options" autocomplete="off">
         <label for="basic">Basic employment (%)</label><br>
-        
-        <h3 class="layers__subtitle">2040 projection choropleths</h3>
-        <input type="radio" id="lrtp_hh" name="layer__radio-options" autocomplete="off">
-        <label for="lrtp_hh">LTRP 2040 household projection</label><br>
-
-        <input type="radio" id="lrtp_emp" name="layer__radio-options" autocomplete="off">
-        <label for="lrtp_emp">LTRP 2040 employment projection</label><br>
-
-        <input type="radio" id="feir_hh" name="layer__radio-options" autocomplete="off">
-        <label for="feir_hh">FEIR 2040 household projection</label><br>
-
-        <input type="radio" id="feir_emp" name="layer__radio-options" autocomplete="off">
-        <label for="feir_emp">FEIR 2040 employment projection</label><br>
-
-        <input type="radio" id="fmax_hh" name="layer__radio-options" autocomplete="off">
-        <label for="fmax_hh">FMAX 2040 household projection</label><br>
-
-        <input type="radio" id="fmax_emp" name="layer__radio-options" autocomplete="off">
-        <label for="fmax_emp">FMAX 2040 employment projection</label><br>
 
         <h3 class="layers__subtitle">Average trips to focus area</h3>
+        <input type="radio" id="to_trips_total" name="layer__radio-options" autocomplete="off">
+        <label for="to_trips_total">Total trips</label><br>
+
         <input type="radio" id="to_trips_transit" name="layer__radio-options" autocomplete="off">
         <label for="to_trips_transit">Transit trips</label><br>
 
@@ -95,6 +79,8 @@
         <label for="to_trips_walk">Walking trips</label><br>
 
         <h3 class="layers__subtitle">Average trips from focus area</h3>
+        <input type="radio" id="from_trips_total" name="layer__radio-options" autocomplete="off">
+        <label for="from_trips_total">Total trips</label><br>
 
         <input type="radio" id="from_trips_transit" name="layer__radio-options" autocomplete="off">
         <label for="from_trips_transit">Transit trips</label><br>
@@ -110,7 +96,33 @@
 
         <input type="radio" id="from_trips_walk" name="layer__radio-options" autocomplete="off">
         <label for="from_trips_walk">Walking trips</label><br>
+
+        <h3 class="layers__subtitle">Minimum travel time</h3>
+
+        <input type="radio" id="from_west_station" name="layer__radio-options" autocomplete="off">
+        <label for="from_west_station">Travel time from West Station</label><br>
+
+        <input type="radio" id="to_west_station" name="layer__radio-options" autocomplete="off">
+        <label for="to_west_station">Travel time to West Station</label><br>
         
+        <!-- <h3 class="layers__subtitle">2040 projection choropleths</h3>
+        <input type="radio" id="lrtp_hh" name="layer__radio-options" autocomplete="off">
+        <label for="lrtp_hh">LTRP 2040 household projection</label><br>
+
+        <input type="radio" id="lrtp_emp" name="layer__radio-options" autocomplete="off">
+        <label for="lrtp_emp">LTRP 2040 employment projection</label><br>
+
+        <input type="radio" id="feir_hh" name="layer__radio-options" autocomplete="off">
+        <label for="feir_hh">FEIR 2040 household projection</label><br>
+
+        <input type="radio" id="feir_emp" name="layer__radio-options" autocomplete="off">
+        <label for="feir_emp">FEIR 2040 employment projection</label><br>
+
+        <input type="radio" id="fmax_hh" name="layer__radio-options" autocomplete="off">
+        <label for="fmax_hh">FMAX 2040 household projection</label><br>
+
+        <input type="radio" id="fmax_emp" name="layer__radio-options" autocomplete="off">
+        <label for="fmax_emp">FMAX 2040 employment projection</label><br> -->
         <input type="reset" value="Reset map settings" id="reset">
       </form>
       <svg width="200" height="100" class="legend legend__massbuilds">
@@ -124,10 +136,10 @@
         <circle cx="15" cy="90" r="5" fill="#a6cee3" />
         <text x="30" y="94">Projected</text>
       </svg>
-      <svg width="200" height="140" class="legend legend__choropleth">
-        <text x="0" y="16" class="legend__title">Choropleth scale</text>
+      <svg width="250" height="140" class="legend legend__choropleth">
+        <text x="0" y="16" class="legend__title">Choropleth/isochrone scale</text>
         <rect x="10" y="24" width="16" height="16" fill="#cccccc" />
-        <text x="30" y="36" id="legend-0">0</text>
+        <text x="30" y="36" id="legend-0"></text>
         <rect x="10" y="44" width="16" height="16" fill="#fef0d9" />
         <text x="30" y="56" id="legend-1"></text>
         <rect x="10" y="64" width="16" height="16" fill="#fdcc8a" />
