Remove missing layers (testing Mapbox error)
ws-isochrone and trips-from-focus

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <input type="radio" id="to_trips_walk" name="layer__radio-options" autocomplete="off">
         <label for="to_trips_walk">Walking trips</label><br>
 
-        <h3 class="layers__subtitle">Average trips from focus area</h3>
+        <!-- <h3 class="layers__subtitle">Average trips from focus area</h3>
         <input type="radio" id="from_trips_total" name="layer__radio-options" autocomplete="off">
         <label for="from_trips_total">Total trips</label><br>
 
@@ -95,15 +95,15 @@
         <label for="from_trips_bike">Bike trips</label><br>
 
         <input type="radio" id="from_trips_walk" name="layer__radio-options" autocomplete="off">
-        <label for="from_trips_walk">Walking trips</label><br>
+        <label for="from_trips_walk">Walking trips</label><br> -->
 
-        <h3 class="layers__subtitle">Minimum travel time</h3>
+        <!-- <h3 class="layers__subtitle">Minimum travel time</h3>
 
         <input type="radio" id="from_west_station" name="layer__radio-options" autocomplete="off">
         <label for="from_west_station">Travel time from West Station</label><br>
 
         <input type="radio" id="to_west_station" name="layer__radio-options" autocomplete="off">
-        <label for="to_west_station">Travel time to West Station</label><br>
+        <label for="to_west_station">Travel time to West Station</label><br> -->
         
         <!-- <h3 class="layers__subtitle">2040 projection choropleths</h3>
         <input type="radio" id="lrtp_hh" name="layer__radio-options" autocomplete="off">
