--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <input type="radio" id="to_trips_walk" name="layer__radio-options" autocomplete="off">
         <label for="to_trips_walk">Walking trips</label><br>
 
-        <!-- <h3 class="layers__subtitle">Average trips from focus area</h3>
+        <h3 class="layers__subtitle">Average trips from focus area</h3>
         <input type="radio" id="from_trips_total" name="layer__radio-options" autocomplete="off">
         <label for="from_trips_total">Total trips</label><br>
 
@@ -95,7 +95,7 @@
         <label for="from_trips_bike">Bike trips</label><br>
 
         <input type="radio" id="from_trips_walk" name="layer__radio-options" autocomplete="off">
-        <label for="from_trips_walk">Walking trips</label><br> -->
+        <label for="from_trips_walk">Walking trips</label><br>
 
         <!-- <h3 class="layers__subtitle">Minimum travel time</h3>
 
@@ -104,25 +104,6 @@
 
         <input type="radio" id="to_west_station" name="layer__radio-options" autocomplete="off">
         <label for="to_west_station">Travel time to West Station</label><br> -->
-        
-        <!-- <h3 class="layers__subtitle">2040 projection choropleths</h3>
-        <input type="radio" id="lrtp_hh" name="layer__radio-options" autocomplete="off">
-        <label for="lrtp_hh">LTRP 2040 household projection</label><br>
-
-        <input type="radio" id="lrtp_emp" name="layer__radio-options" autocomplete="off">
-        <label for="lrtp_emp">LTRP 2040 employment projection</label><br>
-
-        <input type="radio" id="feir_hh" name="layer__radio-options" autocomplete="off">
-        <label for="feir_hh">FEIR 2040 household projection</label><br>
-
-        <input type="radio" id="feir_emp" name="layer__radio-options" autocomplete="off">
-        <label for="feir_emp">FEIR 2040 employment projection</label><br>
-
-        <input type="radio" id="fmax_hh" name="layer__radio-options" autocomplete="off">
-        <label for="fmax_hh">FMAX 2040 household projection</label><br>
-
-        <input type="radio" id="fmax_emp" name="layer__radio-options" autocomplete="off">
-        <label for="fmax_emp">FMAX 2040 employment projection</label><br> -->
         <input type="reset" value="Reset map settings" id="reset">
       </form>
       <svg width="200" height="100" class="legend legend__massbuilds">
