Re-add transit time isochrone layer

--- a/index.html
+++ b/index.html
@@ -97,13 +97,14 @@
         <input type="radio" id="from_trips_walk" name="layer__radio-options" autocomplete="off">
         <label for="from_trips_walk">Walking trips</label><br>
 
-        <!-- <h3 class="layers__subtitle">Minimum travel time</h3>
+        <h3 class="layers__subtitle">Travel time</h3>
 
         <input type="radio" id="from_west_station" name="layer__radio-options" autocomplete="off">
-        <label for="from_west_station">Travel time from West Station</label><br>
+        <label for="from_west_station">Transit travel time from West Station</label><br>
 
         <input type="radio" id="to_west_station" name="layer__radio-options" autocomplete="off">
-        <label for="to_west_station">Travel time to West Station</label><br> -->
+        <label for="to_west_station">Tranist travel time to West Station</label><br>
+
         <input type="reset" value="Reset map settings" id="reset">
       </form>
       <svg width="200" height="100" class="legend legend__massbuilds">
