Consistently display feature data when double-clicking drawn features

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         <label for="from_west_station">Transit travel time from West Station</label><br>
 
         <input type="radio" id="to_west_station" name="layer__radio-options" autocomplete="off">
-        <label for="to_west_station">Tranist travel time to West Station</label><br>
+        <label for="to_west_station">Transit travel time to West Station</label><br>
 
         <input type="reset" value="Reset map settings" id="reset">
       </form>
