--- a/index.html
+++ b/index.html
@@ -19,9 +19,6 @@
     <aside class="sidebar">
       <form class="layers">
         <h3 class="layers__subtitle">Map layers</h3>
-        <input type="checkbox" id="focus-area" autocomplete="off">
-        <label for="focus-area">Focus area and buffer</label><br>
-        
         <input type="checkbox" id="mbta-lines" autocomplete="off">
         <label for="mbta-lines">MBTA + ferry lines</label><br>
 
@@ -31,8 +28,14 @@
         <input type="checkbox" id="massbuilds" autocomplete="off">
         <label for="massbuilds">MassBuilds developments</label><br>
 
+        <input type="checkbox" id="focus-area" autocomplete="off">
+        <label for="focus-area">Focus area and buffer</label><br>
+
         <input type="checkbox" id="openspace" autocomplete="off">
-        <label for="openspace">Open spaces</label>
+        <label for="openspace">Open spaces</label><br>
+
+        <input type="checkbox" id="envjustice" autocomplete="off">
+        <label for="envjustice">Environmental justice communities (block groups)</label>
         
         <h3 class="layers__subtitle">Demographic features</h3>
         <input type="radio" id="population" name="layer__radio-options" autocomplete="off">
