Fix transit time tooltip values

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <label for="openspace">Open spaces</label><br>
 
         <input type="checkbox" id="envjustice" autocomplete="off">
-        <label for="envjustice">Environmental justice communities (block groups)</label>
+        <label for="envjustice">Environmental justice communities</label>
         
         <h3 class="layers__subtitle">Demographic features</h3>
         <input type="radio" id="population" name="layer__radio-options" autocomplete="off">
