Reorder choropleths and fix range labels

--- a/index.html
+++ b/index.html
@@ -62,17 +62,17 @@
         <input type="radio" id="from_trips_total" name="layer__radio-options" autocomplete="off">
         <label for="from_trips_total">Average trips from focus area (2040)</label><br>
 
-        <input type="radio" id="transit_from_west_station" name="layer__radio-options" autocomplete="off">
-        <label for="transit_from_west_station">Transit travel time from West Station (2040)</label><br>
-
         <input type="radio" id="transit_to_west_station" name="layer__radio-options" autocomplete="off">
         <label for="transit_to_west_station">Transit travel time to West Station (2040)</label><br>
 
-        <input type="radio" id="bike_from_west_station" name="layer__radio-options" autocomplete="off">
-        <label for="bike_from_west_station">Bike travel time from West Station (2040)</label><br>
+        <input type="radio" id="transit_from_west_station" name="layer__radio-options" autocomplete="off">
+        <label for="transit_from_west_station">Transit travel time from West Station (2040)</label><br>
 
         <input type="radio" id="bike_to_west_station" name="layer__radio-options" autocomplete="off">
         <label for="bike_to_west_station">Bike travel time to West Station (2040)</label><br>
+
+        <input type="radio" id="bike_from_west_station" name="layer__radio-options" autocomplete="off">
+        <label for="bike_from_west_station">Bike travel time from West Station (2040)</label><br>
 
         <input type="reset" value="Reset map settings" id="reset">
       </form>
@@ -88,7 +88,7 @@
         <text x="30" y="94">Projected</text>
       </svg>
       <svg width="250" height="140" class="legend legend__choropleth">
-        <text x="0" y="16" class="legend__title">Choropleth/isochrone scale</text>
+        <text x="0" y="16" class="legend__title">Basemap scale</text>
         <rect x="10" y="24" width="16" height="16" fill="#cccccc" />
         <text x="30" y="36" id="legend-0"></text>
         <rect x="10" y="44" width="16" height="16" fill="#fef0d9" />
