--- a/index.html
+++ b/index.html
@@ -37,14 +37,17 @@
         <input type="checkbox" id="massbuilds" autocomplete="off">
         <label for="massbuilds">MassBuilds developments</label><br>
 
+        <input type="checkbox" id="bikes" autocomplete="off">
+        <label for="bikes">Bike lanes</label><br>
+
+        <input type="checkbox" id="envjustice" autocomplete="off">
+        <label for="envjustice">Environmental justice communities</label><br>
+
         <input type="checkbox" id="focus-area" autocomplete="off">
         <label for="focus-area">Focus area and buffer</label><br>
 
         <input type="checkbox" id="openspace" autocomplete="off">
         <label for="openspace">Open spaces</label><br>
-
-        <input type="checkbox" id="envjustice" autocomplete="off">
-        <label for="envjustice">Environmental justice communities</label>
         
         <h3 class="layers__subtitle">Basemaps</h3>
         <input type="radio" id="population" name="layer__radio-options" autocomplete="off">
