Display proposed features

--- a/index.html
+++ b/index.html
@@ -43,11 +43,14 @@
         <input type="checkbox" id="envjustice" autocomplete="off">
         <label for="envjustice">Environmental justice communities</label><br>
 
-        <input type="checkbox" id="focus-area" autocomplete="off">
-        <label for="focus-area">Focus area and buffer</label><br>
-
         <input type="checkbox" id="openspace" autocomplete="off">
         <label for="openspace">Open spaces</label><br>
+
+        <input type="checkbox" id="proposed" autocomplete="off">
+        <label for="proposed">Proposed features</label><br>
+
+        <input type="checkbox" id="focus-area" autocomplete="off">
+        <label for="focus-area">Focus area and buffer</label><br>
         
         <h3 class="layers__subtitle">Basemaps</h3>
         <fieldset class="layers__set">
@@ -99,7 +102,7 @@
         <text x="30" y="94">Projected</text>
       </svg>
 
-      <svg width="200" height="60" class="legend legend__bikes">
+      <svg width="200" height="60" class="legend legend__proposed">
         <text x="0" y="16" class="legend__title">Bike lanes</text>
         <line x1="5" y1="30" x2="20" y2="30" stroke="#92C5DE" stroke-width="5"/>
         <text x="30" y="34">Unprotected bike lanes</text>
