Hide all legends on reset

--- a/index.html
+++ b/index.html
@@ -110,12 +110,12 @@
         <text x="30" y="54">Protected bike lanes</text>
       </svg>
 
-      <svg width="270" height="100" class="legend legend__connections">
+      <svg width="270" height="80" class="legend legend__connections">
         <text x="0" y="16" class="legend__title">Dedicated bike facilities</text>
-        <line x1="5" y1="30" x2="20" y2="30" stroke="#3b66b0" stroke-width="5"/>
-        <text x="30" y="34">Grand Junction</text>
-        <line x1="5" y1="50" x2="20" y2="50" stroke="#67cbe4" stroke-width="5"/>
-        <text x="30" y="54">New BRT facilities</text>
+        <line x1="5" y1="30" x2="20" y2="30" stroke="#67cbe4" stroke-width="5"/>
+        <text x="30" y="34">New BRT facilities</text>#3b66b0
+        <line x1="5" y1="50" x2="20" y2="50" stroke="#3b66b0" stroke-width="5"/>
+        <text x="30" y="54">Grand Junction connection</text>
         <line x1="5" y1="70" x2="20" y2="70" stroke="#233069" stroke-width="5"/>
         <text x="30" y="74">New bike/pedestrian facilities</text>
       </svg>
