Fix typos and remove extra console logs

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
       <form class="layers">
         <h3 class="layers__subtitle">Map layers</h3>
         <input type="checkbox" id="mbta-lines" autocomplete="off">
-        <label for="mbta-lines">MBTA + ferry lines</label><br>
+        <label for="mbta-lines">MBTA and ferry lines</label><br>
 
         <input type="checkbox" id="mbta-stops" autocomplete="off">
-        <label for="mbta-stops">MBTA + ferry stops</label><br>
+        <label for="mbta-stops">MBTA and ferry stops</label><br>
 
         <input type="checkbox" id="massbuilds" autocomplete="off">
         <label for="massbuilds">MassBuilds developments</label><br>
@@ -111,9 +111,9 @@
       </svg>
 
       <svg width="270" height="80" class="legend legend__connections">
-        <text x="0" y="16" class="legend__title">Dedicated bike facilities</text>
+        <text x="0" y="16" class="legend__title">Previously identified connections</text>
         <line x1="5" y1="30" x2="20" y2="30" stroke="#67cbe4" stroke-width="5"/>
-        <text x="30" y="34">New BRT facilities</text>#3b66b0
+        <text x="30" y="34">New bus rapid transit (BRT) facilities</text>#3b66b0
         <line x1="5" y1="50" x2="20" y2="50" stroke="#3b66b0" stroke-width="5"/>
         <text x="30" y="54">Grand Junction connection</text>
         <line x1="5" y1="70" x2="20" y2="70" stroke="#233069" stroke-width="5"/>
